# keystroke-paste

./: CMakeLists.txt  README.md
src/: clip.hpp  data.hpp  key.hpp  keyboard.cpp  keyboard.hpp  main.cpp  types.hpp
src/x11/: clip.cpp  data.cpp  key.cpp  types.cpp
